--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "fortawesome": "^0.0.1-security",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
+    "vue-sidebar-menu": "^5.1.2",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
