--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
     "fortawesome": "^0.0.1-security",
