--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
     "fortawesome": "^0.0.1-security",
+    "gun": "^0.2020.1235",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
+    "vue-gun": "^0.0.3",
     "vue-router": "^4.0.0-0",
     "vue-sidebar-menu": "^5.1.2",
     "vuex": "^4.0.0-0"
