--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.7",
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@vue/apollo-composable": "^4.0.0-alpha.16",
+    "@vue/apollo-option": "^4.0.0-alpha.16",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
     "fortawesome": "^0.0.1-security",
-    "gun": "^0.2020.1235",
+    "graphql": "^16.2.0",
+    "gsap": "^3.9.1",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
-    "vue-gun": "^0.0.3",
     "vue-router": "^4.0.0-0",
     "vue-sidebar-menu": "^5.1.2",
     "vuex": "^4.0.0-0"
